--- a/Finnish/main/MiuiVideoGlobal.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiVideoGlobal.apk/res/values-fi-rFI/strings.xml
@@ -38,6 +38,7 @@
     <string name="alert_dialog_download_prepare">Valmistellaan latausta…</string>
     <string name="alert_dialog_download_progress">"Ladataan sovellusta: "</string>
     <string name="app_name">Mi Video</string>
+    <string name="app_name_hungama">Hungama Toisto</string>
     <string name="cancel">Peruuta</string>
     <string name="canceled">Peruutettu</string>
     <string name="cast_ad_label">Mainos</string>
@@ -82,6 +83,11 @@
     <string name="character_counter_pattern">%1$d / %2$d</string>
     <string name="click_to_reload_more">Lataa lisää napauttamalla</string>
     <string name="click_to_retry">Yritä uudelleen</string>
+    <string name="com_mixpanel_android_close">Sulje</string>
+    <string name="com_mixpanel_android_done">Valmis</string>
+    <string name="com_mixpanel_android_exit">Poistu</string>
+    <string name="com_mixpanel_android_logo">By Mixpanel</string>
+    <string name="com_mixpanel_android_notification_image">Kuvaa ei näytetä</string>
     <string name="com_permission_desc">Mi Video ei voi käyttää laitteesi videoita. Salli käyttö Asetuksissa.</string>
     <string name="com_permission_title">Käyttöoikeuksia vaaditaan</string>
     <string name="common_google_play_services_enable_button">Ota käyttöön</string>
@@ -110,14 +116,54 @@
     <string name="diy_channels_tips">Voit nyt mukauttaa kanaviesi luetteloa.</string>
     <string name="empty_channels">Hallinnoi kanavoita</string>
     <string name="empty_subscribe">Et tilaa vielä mitään.</string>
+    <string name="enable_background_audio">Toista taustalla</string>
+    <string name="error_drm_not_supported">Suojattu sisältö ei ole tuettuna alle 18 API-tasoilla</string>
+    <string name="error_drm_unknown">Tapahtui tuntematon DRM-virhe</string>
+    <string name="error_drm_unsupported_scheme">Tämä laite ei tue vaadittua DRM-järjestelmää</string>
+    <string name="error_mg_content_not_available">Tämä sisältö ei ole saatavilla maassasi.</string>
+    <string name="error_mg_no_content">Tälle elokuvalle ei ole sisältöä saatavilla. Yritä myöhemmin uudelleen</string>
+    <string name="error_mg_no_content_for_tv">Tälle TV-sarjalle ei ole sisältöä saatavilla. Yritä myöhemmin uudelleen</string>
+    <string name="error_msg_invalid_url">Virheellinen URL-osoite. Yritä myöhemmin uudelleen</string>
+    <string name="error_msg_no_network">Verkkoyhteyttä ei havaittu. Varmista, että olet yhteydessä verkkoon ja yritä uudelleen.</string>
+    <string name="error_msg_server_error">Palvelin ei ole saatavilla tällä hetkellä. Yritä myöhemmin uudelleen.</string>
+    <string name="error_msg_socket_timeout">Yhteyden aikakatkaisu. Yritä myöhemmin uudelleen</string>
+    <string name="error_msg_video_play_time_out">Pahoittelut, emme voi toistaa tätä videota tällä hetkellä. Yritä myöhemmin uudelleen.</string>
+    <string name="error_msg_video_play_time_out_title">Aikakatkaisu</string>
+    <string name="error_no_content">Sisältöä ei ole saatavilla.</string>
+    <string name="error_title">Tietoja</string>
     <string name="exit">Poistu</string>
     <string name="exo_controls_fastforward_description">Kelaa eteenpäin</string>
+    <string name="exo_controls_fullscreen_description">Kokonäyttötila</string>
     <string name="exo_controls_next_description">Seuraava raita</string>
     <string name="exo_controls_pause_description">Pysäytä</string>
     <string name="exo_controls_play_description">Toista</string>
     <string name="exo_controls_previous_description">Edellinen raita</string>
+    <string name="exo_controls_repeat_all_description">Toista kaikki</string>
+    <string name="exo_controls_repeat_off_description">Älä toista</string>
+    <string name="exo_controls_repeat_one_description">Toista kerran</string>
     <string name="exo_controls_rewind_description">Kelaa taaksepäin</string>
+    <string name="exo_controls_shuffle_description">Sekoita</string>
     <string name="exo_controls_stop_description">Lopeta</string>
+    <string name="exo_download_completed">Lataus valmis</string>
+    <string name="exo_download_description">Lataa</string>
+    <string name="exo_download_downloading">Ladataan</string>
+    <string name="exo_download_failed">Lataus epäonnistui</string>
+    <string name="exo_download_notification_channel_name">Lataukset</string>
+    <string name="exo_download_removing">Poistetaan latauksia</string>
+    <string name="exo_item_list">%1$s, %2$s</string>
+    <string name="exo_track_bitrate">%1$.2f Mt/s</string>
+    <string name="exo_track_mono">Mono</string>
+    <string name="exo_track_resolution">%1$d × %2$d</string>
+    <string name="exo_track_selection_auto">Auto</string>
+    <string name="exo_track_selection_none">Ei mitään</string>
+    <string name="exo_track_selection_title_audio">Ääni</string>
+    <string name="exo_track_selection_title_text">Teksti</string>
+    <string name="exo_track_selection_title_video">Video</string>
+    <string name="exo_track_stereo">Stereo</string>
+    <string name="exo_track_surround">Surround-ääni</string>
+    <string name="exo_track_surround_5_point_1">5.1 surround-ääni</string>
+    <string name="exo_track_surround_7_point_1">7.1 surround-ääni</string>
+    <string name="exo_track_unknown">Tuntematon</string>
     <string name="explore_on_mi_video">Löydä lisää Mi Videossa</string>
     <string name="failed_to_fetch_data">Tietoja ei voitu ladata.</string>
     <string name="finish">Valmis</string>
@@ -127,13 +173,24 @@
     <string name="fw_reload_title">Verkkoyhteyttä ei voitu muodostaa.</string>
     <string name="get_ph_ticket">Hanki koodi</string>
     <string name="goto_sign_up">Luo tili</string>
+    <string name="grant_write_settings_permission">Salli tämä käyttöoikeus hallitaksesi soittimen kirkkautta</string>
     <string name="hidden_channels">Seuraavia kanavia ei näytetä Aloitussivulla.</string>
+    <string name="history">Historia</string>
     <string name="id_namespace">hungama</string>
     <string name="init_channels">Palauta oletukset</string>
     <string name="isSubscribed">Tilattu</string>
     <string name="isornot_your_mi_account">Onko tämä Mi Tilisi?</string>
     <string name="language_select_tips">Mitkä ovat videon kielimieltymyksesi? Voit valita useita kieliä.</string>
     <string name="language_setting_tips">Tallennettiin onnistuneesti. Voit muuttaa kielimieltymystäsi asetuksissa.</string>
+    <string name="later">Myöhemmin</string>
+    <string name="lbl_connection_failed_alert_title">Yhteys epäonnistui</string>
+    <string name="lbl_player_local_video_deleted_alert_dialog_text">Tätä videota ei voi toistaa.</string>
+    <string name="lbl_player_no_network">Verkkoyhteyttä ei tunnistettu. Varmista, että olet yhteydessä verkkoon ja yritä uudelleen.</string>
+    <string name="lbl_player_response_failed_alert_dialog_text">Pahoittelut, pyyntöäsi ei voi suorittaa tällä hetkellä. Yritä myöhemmin uudelleen.</string>
+    <string name="lbl_setting_playback_streaming_auto">Auto</string>
+    <string name="lbl_url_alert">Tietoja</string>
+    <string name="logging_normal">Normaali</string>
+    <string name="logging_verbose">Jaaritteleva</string>
     <string name="login">Kirjaudu sisään</string>
     <string name="lp_base_folder">SD-kortti</string>
     <string name="lp_speed_title">Toistonopeus</string>
@@ -162,6 +219,7 @@
     <string name="lv_confirm_delete_videos">Poistetaanko kohteet?</string>
     <string name="lv_confirm_hide_videos">Piilotetaanko videot?</string>
     <string name="lv_confirm_unhide_videos">Poistetaanko videot piilosta?</string>
+    <string name="lv_content_null">Täällä ei ole kohteita</string>
     <string name="lv_deleting">Poistetaan…</string>
     <string name="lv_device_list">Laitteet</string>
     <string name="lv_device_list_seaching">Ei suoratoistolaitteita</string>
@@ -277,6 +335,7 @@ Kaikki verkosta löytyvät tekstitykset tarjoaa opensubtitles.org."</string>
     <string name="no_recommend_data">Ei suositeltuja videoita juuri nyt</string>
     <string name="not_show">Älä näytä uudelleen</string>
     <string name="notify_apk_installed">Ladattiin onnistuneesti</string>
+    <string name="off">[pois käytöstä]</string>
     <string name="ok">OK</string>
     <string name="ovp_alert_dialog_download_install_task">Ladataan HD-liitännäistä…</string>
     <string name="ovp_buffering_video_netplay_label_v5">Puskuroidaan…</string>
@@ -332,7 +391,13 @@ Kaikki verkosta löytyvät tekstitykset tarjoaa opensubtitles.org."</string>
     <string name="ovp_player_plugin_dlg_neg_btn">Sulje</string>
     <string name="ovp_player_plugin_dlg_no_content">Videosoittimen liitännäisiä ei ole asennettu.</string>
     <string name="ovp_player_plugin_dlg_title">Videosoittimen liitännäiset</string>
+    <string name="ovp_player_update_dialog_info">Päivitä Mi Videon liitännäinen viimeisimpään versioon toistaaksesi tämän videon. Päivitetäänkö nyt?</string>
+    <string name="ovp_player_update_info">"Tätä videota ei voi toistaa.
+Päivitä Mi Video viimeisimpään versioon ensin."</string>
     <string name="ovp_plugin_install_failure">Liitännäistä ei voitu asentaa</string>
+    <string name="ovp_resolution_auto">Auto</string>
+    <string name="ovp_resolution_not_support">Tämän videon tarkkuutta ei voi muuttaa</string>
+    <string name="ovp_resolution_title">Tarkkuus</string>
     <string name="ovp_search_key_not_null">Hae antamalla avainsanoja</string>
     <string name="ovp_select_ci">Valitse jakso</string>
     <string name="ovp_select_related_video">Samankaltaisia videoita</string>
@@ -449,6 +514,9 @@ Katso muita videoita!"</string>
     <string name="share_ugc_waitting">Luodaan linkkiä…</string>
     <string name="slid_fail_message">Ei voitu tallentaa</string>
     <string name="slide_save_message">Luodaan videota…</string>
+    <string name="sns_sign_in">Muita tapoja kirjautua</string>
+    <string name="storage_permission_denied">Tallennustilan käyttö estettiin</string>
+    <string name="sure_to_logout">Kirjaudutaanko ulos nyt?</string>
     <string name="switch_ratio_pause">Toistonopeus on epävakaa. Vaihdetaan takaisin oletusnopeudelle…</string>
     <string name="t_downloading">Ladataan:</string>
     <string name="t_exit_app">Poistu napauttamalla uudelleen.</string>
@@ -471,6 +539,9 @@ Katso muita videoita!"</string>
     <string name="title_publisher">Julkaisija</string>
     <string name="title_subscribe">Tilaukset</string>
     <string name="toast_share_failed">Ei voitu jakaa. Odota minuutti tai kaksi ja yritä uudelleen.</string>
+    <string name="txt_cancel_download">PERUUTA SIIRTO</string>
+    <string name="txt_download_complete">Lataus valmis</string>
+    <string name="txt_watch_now">KATSO NYT</string>
     <string name="ugc_confirm_unsubscribe">Poistetaanko tilaus nyt?</string>
     <string name="ui_log_tip">Napauta tätä aluetta piilottaaksesi, paina ja pidä pohjassa tyhjentääksesi vanhat lokitiedot. Raahaa lokitiedot manuaalisesti.</string>
     <string name="update">Päivitä</string>
