--- a/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
@@ -1455,7 +1455,8 @@ Voit jatkaa puhelimesi käyttöä, kun palautat tehdasasetukset. Kun olet määr
   <string name="dangerous_option_hint_title">Korkean riskin ominaisuus on käytössä</string>
   <string name="dangerous_option_switch_title">Ilmoita korkean riskin ominaisuuksista</string>
   <string name="dark_color_mode">Tummatila</string>
-  <string name="dark_color_summary">Käytä järjestelmän taustoilla ja yhteensopivilla sovelluksilla tummempaa väripalettia</string>
+  <string name="dark_color_summary_lcd">Käytä järjestelmän taustoilla ja yhteensopivilla sovelluksilla tummempaa väripalettia. Tummatila voi auttaa lievittämään silmien rasitusta, kun käytät laitettasi pimeässä.</string>
+  <string name="dark_color_summary_oled">Käytä järjestelmän taustoilla ja yhteensopivilla sovelluksilla tummempaa väripalettia. Tummatila vähentää virrankulutusta ja auttaa lievittämään silmien rasitusta.</string>
   <string name="dark_ui_mode">Yötila</string>
   <string name="dark_ui_mode_title">Aseta yötila</string>
   <string name="dashboard_suggestion_condition_footer_content_description">Tiivistä</string>
@@ -1864,9 +1865,8 @@ Asetus vaikuttaa tämän puhelimen kaikkiin käyttäjiin."</string>
   <string name="draw_overlay">Sovellusten päällä näkyminen</string>
   <string name="dtmf_tone_enable_title">Valintanäppäimien näppäinäänet</string>
   <string name="dual_clock">Kaksoiskello</string>
-  <string name="dual_clock_aod_hint">"\Kaksoiskello\" on riippuvainen seuraavista ominaisuuksista: 1. Sammutetulle näytölle, salli kohteiden näyttäminen asetuksissa Asetukset &gt; Näyttö; 2. Lukitusnäytölle, varmista, että käytät oletus- tai klassista teemaa asetuksissa Asetukset &gt; Teemat; 3. Aloitusnäytölle, varmista että käytät järjestelmän oletuskellowidgettiä.</string>
   <string name="dual_clock_aod_open_message">Kaksoiskello näytetään Lukitusnäytöllä, Aloitusnäytöllä ja sammutetulla näytöllä.</string>
-  <string name="dual_clock_hint">\"Kaksoiskello\" on riippuvainen seuraavista ominaisuuksista: 1. Lukitusnäytölle, varmista, että käytät oletus- tai klassista teemaa asetuksissa Asetukset &gt; Teemat; 2. Aloitusnäytölle, varmista että käytät järjestelmän oletuskellowidgettiä.</string>
+  <string name="dual_clock_hint">Kaksoiskello vaatii järjestelmän kellowidgetin ja oletusteeman käytön</string>
   <string name="dual_clock_ok">Selvä</string>
   <string name="dual_clock_open_message">Kaksoiskello näytetään Lukitusnäytöllä ja Aloitusnäytöllä.</string>
   <string name="dual_setting_simcard1">SIM 1</string>
@@ -2211,10 +2211,6 @@ Kaupungissa ei näkynyt hevosia tai muita eläimiä: tavaroita kuljetettiin pien
   <string name="force_stop">Pakota lopetus</string>
   <string name="force_stop_dlg_text">Jos pakotat sovelluksen pysähtymään, se saattaa alkaa toimia virheellisesti.</string>
   <string name="force_stop_dlg_title">Pakotetaanko lopetus?</string>
-  <string name="force_touch">3D Kosketus</string>
-  <string name="force_touch_demo">Esittelynäytös</string>
-  <string name="force_touch_enable">Ota 3D Kosketus käyttöön</string>
-  <string name="force_touch_enable_tips">Paina sovelluskuvakkeita pohjaan nähdäksesi pikavalikon sovellukselle, kun 3D Kosketus on käytössä.</string>
   <string name="foreground_traffic">Etualalla %s</string>
   <string name="forget">Unohda</string>
   <string name="forget_password_button_text">Unohdin salasanani</string>
@@ -3500,8 +3496,6 @@ Valitse käyttöjärjestelmäsi:"</string>
   <string name="onehour">30 minuuttia</string>
   <string name="onekey_migrate">Mi Mover</string>
   <string name="onscreen_keyboard_settings_summary">Näyttönäppäimistön asetukset</string>
-  <string name="open_dark_mode_dialog_summary">Tietyt näytön asetukset eivät ole yhteensopivia Tummantilan kanssa. Asetukset palautetaan ennalleen, kun Tummatila on poistettu käytöstä. Otetaanko Tummatila käyttöön?</string>
-  <string name="open_dark_mode_dialog_title">Tummantilan yhteensopivuus</string>
   <string name="open_demo_mode">Ota käyttöön</string>
   <string name="open_demo_mode_warning_message">Kun Demotila on päällä, tilapalkissa oleva kello pysähtyy ja akku ja signaalin kuvakkeet näyttävät täyttä. Voit muuttaa tätä poistamalla Demotilan käytöstä tai käynnistämällä laitteen uudelleen.</string>
   <string name="open_miui_optimization_title">Ota MIUI optimointi käyttöön</string>
@@ -3658,6 +3652,19 @@ OTG poistetaan käytöstä automaattisesti, kun sitä ei käytetä 10 minuuttiin
   <string name="pointer_location_summary">Näytön peittokuva näyttää nykyiset kosketustiedot</string>
   <string name="pointer_settings_category">Hiiri/ohjauslevy</string>
   <string name="pointer_speed">Osoittimen nopeus</string>
+  <string name="popup_gesture_summary">Nosta puhelin ja katso näyttöä avataksesi etukameran automaattisesti</string>
+  <string name="popup_gesture_title">Avaa etukamera nostamalla</string>
+  <string name="popup_led_summary">Näytä animaatio, kun etukamera tulee näkyviin ja palaa takaisin</string>
+  <string name="popup_led_title">Visuaalinen tehoste</string>
+  <string name="popup_title">Etukameran tehosteet</string>
+  <string name="popup_title_cangmen">Matkustamon ovi</string>
+  <string name="popup_title_chilun">Hammaspyörä</string>
+  <string name="popup_title_jijia">Mecha</string>
+  <string name="popup_title_mofa">Taika</string>
+  <string name="popup_title_muqin">Ksylofoni</string>
+  <string name="popup_title_yingyan">Kondori</string>
+  <string name="popup_voice_summary">Toista ääni, kun kamera tulee näkyviin ja palaa takaisin</string>
+  <string name="popup_voice_title">Äänitehoste</string>
   <string name="popup_window">Rajoita kelluvia ilmoituksia</string>
   <string name="power_apps">Sovellukset</string>
   <string name="power_autorun_apps_empty">Tyhjä</string>
@@ -5422,6 +5429,21 @@ Se on Googlen tapa synkronoida tietoja, ja sen avulla voit käyttää yhteystiet
   <string name="usage_access">Käyttöoikeus</string>
   <string name="usage_access_description">Käyttöoikeus antaa sovellukselle luvan seurata, mitä muita sovelluksia käytät ja kuinka usein, sekä nähdä operaattorisi, kieliasetuksesi ja muita tietoja.</string>
   <string name="usage_access_title">Sovellukset, joilla käyttölupa</string>
+  <string name="usage_app_get_it">Selvä</string>
+  <string name="usage_app_limit_alter_summary">Näyttää siltä, että tämä aikarajoitus on lyhyempi, kuin tänään sovellusta käyttämäsi aika. Asetetaanko rajoitus siitä huolimatta?</string>
+  <string name="usage_app_limit_alter_title">Tarkista käyttöaikarajoitus</string>
+  <string name="usage_app_limit_prelong">Pidennä aikaa</string>
+  <string name="usage_app_limit_reach_summay">%s jäljellä</string>
+  <string name="usage_app_limit_reach_title">%s saavuttaa käyttöaikarajan</string>
+  <string name="usage_app_limit_summary">Valitut sovellukset eivät ole käytettävissä, kun raja on saavutettu</string>
+  <string name="usage_app_limit_title">Rajoita käyttöaikaa</string>
+  <string name="usage_app_other_settings">Lisäasetukset</string>
+  <string name="usage_app_over_content">Olet käyttänyt tätä sovellusta tänään jo %s.</string>
+  <string name="usage_app_over_summary">Olet saavuttanut rajasi. Aika loppui!</string>
+  <string name="usage_app_set_limit_time">Aseta rajoitus</string>
+  <string name="usage_app_system_app_summary">Järjestelmäsovelluksien käyttöaikaa ei voi rajoittaa</string>
+  <string name="usage_app_weekday_limit">Arkipäivät</string>
+  <string name="usage_app_weekend_limit">Viikonloput</string>
   <string name="usage_log">Sovelluksen käyttöstatistiikka</string>
   <string name="usage_state_app_timer">Käyttöaika</string>
   <string name="usage_state_app_usage_detail_title">Sovelluksen käyttötiedot</string>
@@ -5443,7 +5465,7 @@ Se on Googlen tapa synkronoida tietoja, ja sen avulla voit käyttää yhteystiet
   <string name="usage_state_noti_mourth_day">Ilmoitukset ajalle %s</string>
   <string name="usage_state_notification">Hallitse ilmoituksia</string>
   <string name="usage_state_notification_manager">Hallitse sovellusilmoituksia</string>
-  <string name="usage_state_remind_summary">Ota käyttöön saadaksesi käyttöajan hälytyksiä. Voit asettaa eri aikarajoja arkipäiville ja viikonlopuille.</string>
+  <string name="usage_state_remind_summary">Ota käyttöön saadaksesi käyttöajan hälytyksiä</string>
   <string name="usage_state_remind_title">Käyttöajan hälytys</string>
   <string name="usage_state_rest_day">Viikonloput</string>
   <string name="usage_state_saturday">La</string>
