--- a/Finnish/main/miuisystem.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/miuisystem.apk/res/values-fi-rFI/strings.xml
@@ -20,7 +20,7 @@
   <string name="anti_aggression_day">反侵略日</string>
   <string name="arbor_day">植树节</string>
   <string name="armed_forces_day">軍人節</string>
-  <string name="asend">A Lähetys</string>
+  <string name="asend">Lähetä</string>
   <string name="autumn_begins">立秋</string>
   <string name="autumn_equinox">秋分</string>
   <string name="beep">Piippaus</string>
@@ -33,7 +33,7 @@
   <string name="burst">Sarja</string>
   <string name="carousel">Karuselli</string>
   <string name="celesta">Celesta</string>
-  <string name="child">Lapsi</string>
+  <string name="child">Lapsuus</string>
   <string name="childhood">Lapsuus</string>
   <string name="childrens_day">儿童节</string>
   <string name="chimes">Kellopeli</string>
@@ -41,7 +41,7 @@
   <string name="chirp">Sirkutus</string>
   <string name="chord">Sointu</string>
   <string name="christmas_day">圣诞节</string>
-  <string name="citylight">Kaupungin valo</string>
+  <string name="citylight">Kaupungin valot</string>
   <string name="clank">Kalahdus</string>
   <string name="clear_and_bright">清明</string>
   <string name="cloud_state_disabled">Mi Pilven synkronointi ei ole käytössä</string>
@@ -73,7 +73,7 @@
   <string name="double_seventh_day">七夕</string>
   <string name="easter">復活節</string>
   <string name="echo">Kaiku</string>
-  <string name="expect">Odottaa</string>
+  <string name="expect">Jännitys</string>
   <string name="energy">Energia</string>
   <string name="enthusiastic">Innostunut</string>
   <string name="fadein">Häivytys sisään</string>
@@ -82,26 +82,26 @@
   <string name="fireflies">Tulikärpäset</string>
   <string name="flute">Huilu</string>
   <string name="fools_day">愚人节</string>
-  <string name="frenchchic">Ranskalainen tipu</string>
+  <string name="frenchchic">Tyylikäs</string>
   <string name="fresh">Raikas</string>
   <string name="frog">Sammakko</string>
   <string name="game">Peli</string>
   <string name="future">Tulevaisuus</string>
   <string name="glockenspiel">Kellopeli</string>
-  <string name="glorious">Loistava</string>
+  <string name="glorious">Kunnia</string>
   <string name="good_friday">耶穌受難節</string>
   <string name="grain_buds">小满</string>
   <string name="grain_in_ear">芒种</string>
   <string name="grain_rain">谷雨</string>
   <string name="great_cold">大寒</string>
   <string name="great_heat">大暑</string>
-  <string name="greenandblue">Vihreä ja sininen</string>
+  <string name="greenandblue">Sateenkaari</string>
   <string name="group_name_contacts">Yhteystiedot</string>
   <string name="group_name_coworkers">Kollegat</string>
   <string name="group_name_family">Perhe</string>
   <string name="group_name_friends">Ystävät</string>
   <string name="guitar">Kitara</string>
-  <string name="hallofmemories">Muistojen halli</string>
+  <string name="hallofmemories">Muistot</string>
   <string name="harp">Harppu</string>
   <string name="hawaii">Havaiji</string>
   <string name="heavy_snow">大雪</string>
@@ -139,7 +139,7 @@
   <string name="lunar_yi">一</string>
   <string name="lunar_yue">月</string>
   <string name="lunar_zheng">正</string>
-  <string name="makewishes">Tee toiveita</string>
+  <string name="makewishes">Syntymäpäivätoivomus</string>
   <string name="martix">Matriisi</string>
   <string name="messagesent">Viesti lähetetty</string>
   <string name="mi">Mi</string>
@@ -149,7 +149,7 @@
   <string name="mix">MIX</string>
   <string name="mixylophone">Mi (Ksylofoni)</string>
   <string name="moment">Hetki</string>
-  <string name="monet">Monet</string>
+  <string name="monet">Lummelampi</string>
   <string name="morning">Aamu</string>
   <string name="musicbox">Soittorasia</string>
   <string name="national_day">国庆节</string>
@@ -159,7 +159,7 @@
   <string name="notificationxylophone">Ilmoitus (Ksylofoni)</string>
   <string name="orange">Oranssi</string>
   <string name="partys_day">建党节</string>
-  <string name="passionflower">Kärsimyskukka</string>
+  <string name="passionflower">Intohimo</string>
   <string name="peace_day">和平紀念</string>
   <string name="potion">Juoma</string>
   <string name="presentation_payphone">Yleisöpuhelin</string>
